add tags to creation friend and creation friendlist
