# docs/swagger.json
@@ -1142,7 +1142,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.UpdateFriendlist"
+                            "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.FriendlistWithTagsUpdate"
                         }
                     }
                 ],
@@ -3341,6 +3341,20 @@
                 }
             }
         },
+        "github_com_lunovoy_friendly_internal_models.FriendlistWithTagsUpdate": {
+            "type": "object",
+            "properties": {
+                "friendlist": {
+                    "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.UpdateFriendlist"
+                },
+                "tag_ids": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.AdditionTag"
+                    }
+                }
+            }
+        },
         "github_com_lunovoy_friendly_internal_models.Reminder": {
             "type": "object",
             "properties": {
@@ -3411,6 +3425,12 @@
             "properties": {
                 "friend": {
                     "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.UpdateFriendInput"
+                },
+                "tag_ids": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.AdditionTag"
+                    }
                 },
                 "work_info": {
                     "$ref": "#/definitions/github_com_lunovoy_friendly_internal_models.UpdateWorkInfoInput"
